--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
           <div class="col-lg-4">
             <h3 class="text-black h4">¿Por que nosotros?</h3>
             <p>"Enfocados en tu bienestar, ofrecemos productos farmacéuticos de calidad y atención personalizada.
-               Confía en nosotros para cuidar de tu salud cada día.".</p>
+               Confía en nosotros para cuidar de tu salud cada día.</p>
             
           </div>
           <div class="col-lg-4">
